[tool.poetry]
name = "pykagskangbolu"
version = "0.1.0"
description = "A starter package for python packaging"
authors = ["KangboLu <kblu@ucdavis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
